hard-gists/2661065/run.log
=== Docker Run Log for 2661065 ===
Started at: Mi 29. Okt 13:11:26 CET 2025

[2025-10-29 13:11:26] START: Running container for 2661065
[2025-10-29 13:11:27] SUCCESS: Container 95adec6eed23e70b96b2a2f84f315e4041266fea40f0917d66668745de9fcd78 started for 2661065
=== Container logs for 2661065 ===
  File "/snippet.py", line 205
    print "%s: %s" % (item, value)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2661065 ===
[2025-10-29 13:11:29] INFO: Container 95adec6eed23e70b96b2a2f84f315e4041266fea40f0917d66668745de9fcd78 has stopped
